# dictate

./: .gitignore  Cargo.toml  Justfile  README.md  codex.md  spec.md
src/: app.rs  audio.rs  beep.rs  cli.rs  clipboard.rs  config.rs  lib.rs  logging.rs  main.rs  model.rs  queue.rs  storage.rs  transcriber.rs  tray.rs
tests/: e2e_record.rs
tests/fixtures/: 1234.m4a
