[package]
name = "dictate"
version = "0.1.0"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[dependencies]
anyhow = "1.0"
arboard = "3.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
cpal = "0.15"
crossbeam-channel = "0.5"
directories = "5.0"
indicatif = "0.17"
libc = "0.2"
notify = "6.1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
rodio = "0.19"
rubato = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
symphonia = { version = "0.5", features = ["all"] }
tao = "0.27"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tray-icon = "0.14"
whisper-rs = { version = "0.11", features = ["raw-api", "metal"] }
global-hotkey = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[dev-dependencies]
hound = "3.5"
regex = "1.10"
tempfile = "3.10"
